...
    case currentWorkspace

    var id: String { rawValue }

    var title: String {
        switch self {
        case .both: "All Workspaces"
        case .light: "All Workspaces, Light Appearance"
        case .dark: "All Workspaces, Dark Appearance"
        case .currentWorkspace: "This Workspace Only"
        }
    }
}
...
